--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,15 @@ jobs:
           projectPath: CityPCG-unity
           buildMethod: UnityEditor.SyncVS.SyncSolution
 
+      - name: Lint assets (EditorConfig)
+        run: |
+          sudo apt-get update
+          wget -q https://packages.microsoft.com/config/ubuntu/19.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+          sudo dpkg -i --force-all packages-microsoft-prod.deb
+          sudo apt install -f -y apt-transport-https dotnet-sdk-3.1
+          dotnet tool install -g dotnet-format
+          /root/.dotnet/tools/dotnet-format -f CityPCG-unity/Assets
+
       # - name: Lint solution (gendarme)
       #   run: |
       #     sudo apt-get update
