--- a/CityPCG-unity/.editorconfig
+++ b/CityPCG-unity/.editorconfig
@@ -30,7 +30,7 @@ csharp_new_line_between_query_expression_clauses = true
 csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_method_call_parameter_list_parentheses = false
 csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
-csharp_space_after_keywords_in_control_flow_statements = false
+csharp_space_after_keywords_in_control_flow_statements = true
 csharp_space_between_parentheses = false
 csharp_indent_case_contents = true
 csharp_indent_switch_labels = true
