Disable github upload action
We have run out of space for artifacts.
There does not seem to be a native way to disable artifacts rigth now.
This is thus only a temporary change.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,11 @@ jobs:
           targetPlatform: StandaloneLinux64
           projectPath: CityPCG-unity
 
-      - name: Upload build
-        uses: actions/upload-artifact@v1
-        with:
-          name: Build
-          path: build
+      # - name: Upload build
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: Build
+      #     path: build
 
       - name: Generate solution
         uses: webbertakken/unity-builder@v0.10
