--- a/CityPCG-unity/Packages/manifest.json
+++ b/CityPCG-unity/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.formats.fbx": "3.0.1-preview.2",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
+    "com.unity.quicksearch": "1.6.0-preview.6",
     "com.unity.test-framework": "1.1.11",
     "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
